--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!-- Title tag -->
+<title>InfraGenie – AI-Powered DevOps Toolkit</title>
+
+<!-- Meta Description -->
+<meta name="description" content="Generate Kubernetes, Terraform, and Docker configs with a single prompt using AI. Built for DevOps engineers." />
+
+<!-- Canonical URL (optional but good practice) -->
+<link rel="canonical" href="https://infragenie.vercel.app/" />
+
+<!-- Open Graph (for Facebook, LinkedIn) -->
+<meta property="og:title" content="InfraGenie – AI-Powered DevOps Toolkit" />
+<meta property="og:description" content="Generate Kubernetes, Terraform, and Docker code instantly with AI." />
+<meta property="og:image" content="https://infragenie.vercel.app/og-image.png" />
+<meta property="og:url" content="https://infragenie.vercel.app/" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="InfraGenie – AI-Powered DevOps Toolkit" />
+<meta name="twitter:description" content="Generate secure infra manifests in seconds using AI." />
+<meta name="twitter:image" content="https://infragenie.vercel.app/og-image.png" />
+
     <meta charset="UTF-8" />
     <title>InfraGenie</title>
   </head>
