--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,6 +23,8 @@
 <meta name="twitter:description" content="Generate secure infra manifests in seconds using AI." />
 <meta name="twitter:image" content="https://infragenie.vercel.app/og-image.png" />
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <meta charset="UTF-8" />
     <title>InfraGenie</title>
   </head>
