--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,9 @@
 <meta name="twitter:image" content="https://infragenie.vercel.app/og-image.png" />
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="icon" href=%PUBLIC_URL%/favicon.ico" />
+
+
 
     <meta charset="UTF-8" />
     <title>InfraGenie</title>
