--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,6 +27,15 @@
 <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
 
+<script>
+  window.showToast = (msg) => {
+    const t = document.createElement('div');
+    t.innerText = msg;
+    t.style = 'position:fixed;bottom:30px;left:50%;transform:translateX(-50%);background:#333;color:white;padding:10px 20px;border-radius:6px;z-index:9999;font-size:14px;';
+    document.body.appendChild(t);
+    setTimeout(() => t.remove(), 3000);
+  }
+</script>
 
 
     <meta charset="UTF-8" />
